source/css/style.scss
@import 'normalize';
@import 'typecsset';
@import 'pygments';
@import 'fonts';

// Variables

$primary-color:    #307ea9;  // links, etc
$secondary-color:  #555;     // text
$tertiary-color:   #aaa;     // damped text
$detail-color:     #dedede;  // borders, etc
$background-color: #fafafa;  // background in code sections
$alt-background-color: #eee; // background in code sections
$hover-color: lighten($primary-color, 10%); // hover links
$transparent-color: rgba(0, 0, 0, 0);

$footer-height: 4 * $typecsset-base-line-height;

$small-number: 10px; // for small paddings and margins

// Mixins
@mixin bigger-than-mobile {
  @media screen and (min-width: 500px) {
    @content
  }
}

// Page spacial structure

html {
  position: relative;
  min-height: 100%;
  background-color: $background-color;
}

body {
  font-family: $font-family-serif;
  padding: $typecsset-magic-number $small-number $typecsset-magic-number + $footer-height $small-number;
  color: $secondary-color;
}

.main {
  margin-left: auto;
  margin-right: auto;
  max-width: 50em;
  position: relative;
}

.site-header {
  .logo {
    @include typecsset-font-size($typecsset-h2-size);
    font-weight: bold;
  }

  .site-nav {
    position: absolute;
    right: 0;
    bottom: 0;
  }
}

footer {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: $footer-height;

  .logo {
    font-family: $font-family-sans;
    font-weight: bold;
  }

  .main {
    height: $footer-height;
  }

  .corner {
    position: absolute;
    bottom: $small-number;
    line-height: 1rem;
    &.left { left: 1px; }
    &.right { right: 1px; }
  }
}

// Headings

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $font-family-sans;
  font-weight: normal;
}


// Links

a {
  text-decoration: none;
  color: $primary-color;
  transition: color .25s ease;

  &:hover {
    color: $hover-color;
  }
}

a.social,
a.site-nav-link,
.logo a {
  color: $secondary-color;
}

.damped,
a.damped,
.damped a {
  color: $tertiary-color;
}

a.site-nav-link {
  font-family: $font-family-sans;
  @include typecsset-font-size($typecsset-h6-size);
  text-transform: uppercase;
}

a.social,
a.site-nav-link,
.logo a {
  &:hover {
    color: $hover-color;
  }
}


// Lists

.horizontal-list {
  list-style-type: none;
  margin: 0;

  li {
    display: inline-block;
    margin-left: $typecsset-base-font-size;
    margin-left: 1rem;
  }

  li:first-child {
    margin-left: 0;
  }

}

.unstyled-list {
  list-style-type: none;
  margin: 0;
}


// Detailed-item
// Similar to a media object, except that the detail is hidden on mobile

.detailed-item {
  position: relative;

  .detail {
    display: none;
  }

  @include bigger-than-mobile {
    .item {
      display: inline-block;
      padding-right: 8em;
      padding-right: 8rem;
    }

    .detail {
      position: absolute;
      display: block;
      right: 0;
      bottom: 0;
    }
  }
}

// Utilities

.text-centered {
  text-align: center;
}

// Other customizations

time {
  @include typecsset-font-size($typecsset-base-font-size);

  color: $tertiary-color;
  letter-spacing: -.05rem;
}

pre,
code {
  font-family: $font-family-mono;
  background-color: $alt-background-color;
  box-shadow: inset 0 0 0 1px $detail-color;
}

code {
  border-radius: 3px;
  padding-left: 3px;
  padding-right: 3px;
}

pre.highlight {
  page-break-inside: avoid;
  padding: {
    top: $typecsset-magic-number/2;
    bottom: $typecsset-magic-number/2;
    left: $small-number;
    right: $small-number;
  }

  @include bigger-than-mobile {
    padding: $typecsset-magic-number;
  }
}

hr {
  @include typecsset-font-size($typecsset-h1-size);

  border: 0;
  height: 1px;
  background-image: linear-gradient(left, $transparent-color, $secondary-color, $transparent-color);
}

article {
  p,
  ul,
  ol {
    text-align: justify;
  }
}

blockquote {
  @include typecsset-font-size($typecsset-h3-size);
  font-style: italic;

  p {
    text-align: left;

    &:before,
    &:last-of-type:after {
      @extend %typecsset-vertical-rhythm;
      font-style: normal;
      font-family: $font-family-custom;
      color: $tertiary-color;
    }

    &:before {
      @include typecsset-font-size($typecsset-h2-size);
      padding-right: .2em;
    }

    &:last-of-type:after {
      @include typecsset-font-size($typecsset-h4-size);
      padding-left: .4em;
    }
  }
}

cite {
  @include typecsset-font-size($typecsset-h5-size);
  display: block;
  text-align: right;

  &:before {
    content: '–';
  }
}

// Deactivate left margins on mobile

blockquote,
cite,
ul,
ol,
dd {
  @include typecsset-space(margin-left, 1);
  @include typecsset-space(margin-right, 1);
  @include bigger-than-mobile {
    @include typecsset-space(margin-left);
    @include typecsset-space(margin-right);
  }
}




// Icons

[class^="icon-"]:before,
[class*=" icon-"]:before {
  font-family: $font-family-custom;
  font-style: normal;
  font-weight: normal;
  speak: none;

  display: inline-block;
  text-decoration: inherit;
  width: 1em;
  text-align: center;
  /* opacity: .8; */

  /* For safety - reset parent styles, that can break glyph codes*/
  font-variant: normal;
  text-transform: none;

  /* fix buttons height, for twitter bootstrap */
  line-height: 1em;

  /* increase size */
  font-size: 120%;
}

.icon-stackoverflow:before { content: '\4dc0'; } /* '䷀' */
.icon-mail:before { content: '\2709'; } /* '✉' */
.icon-rss:before { content: '\25c9'; } /* '◉' */
.icon-github:before { content: '\24a2'; } /* '⒢' */
.icon-twitter:before { content: '\74'; } /* 't' */
.icon-cc:before { content: '\a9'; } /* '©' */
.icon-cc-by:before { content: '\ae'; } /* '®' */
.icon-quote-left:before { content: '\201c'; } /* '“' */
.icon-quote-right:before { content: '\201d'; } /* '”' */

